--- a/frontend/educarefront/src/index.css
+++ b/frontend/educarefront/src/index.css
@@ -8,6 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
+  color:rgb(60, 60, 60)
 }
 
 code {
