--- a/frontend/educarefront/src/Components/DropdownList.css
+++ b/frontend/educarefront/src/Components/DropdownList.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 20px;
 }
 .head{
     display: flex;
